<?xml version="1.0"?>
<package format="2">

  <name>elcash_drone</name>
  <version>0.0.1</version>
  <description>The elcash_drone package</description>
  <maintainer email="rohitsuri.nitr@gmail.com">Rohit Suri</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>std_msgs</depend>

  <export>
  </export>

</package>
